--- a/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
+++ b/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
@@ -58,13 +58,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="https://github.com/charliefalcon/aws-devops-workshop/blob/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg" alt="Cuties First">
+        <img src="./cat0.jpg" alt="Cuties First">
       </div>
       <div class="item">
-        <img src="https://github.com/charliefalcon/aws-devops-workshop/blob/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg" alt="Cuties Second">
+        <img src="./cat1.jpg" alt="Cuties Second">
       </div>
       <div class="item">
-        <img src="https://github.com/charliefalcon/aws-devops-workshop/blob/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg" alt="Cuties Third">
+        <img src="./cat2.jpg" alt="Cuties Third">
       </div>
     </div>
 
